solved border overlapping in jquery easing add form

--- a/static/css/spvideo.css
+++ b/static/css/spvideo.css
@@ -6,8 +6,8 @@
 }
 #formsWrapper ul li
 {
-	float: left;
-	display: inline-block;
+	/*float: left;*/
+	/*display: inline-block;*/
 }
 #formsWrapper ul
 {
